--- a/login-facebook/01-primeira-configuracao/01-configurando.html
+++ b/login-facebook/01-primeira-configuracao/01-configurando.html
@@ -10,8 +10,7 @@
         <script type="text/javascript">
             window.fbAsyncInit = function() {
                 FB.init({
-                    // appId      : '{insira-seu-app-id}',
-                    appId      : '214759089328950',
+                    appId      : '{insira-seu-app-id}',
                     cookie     : true,
                     xfbml      : true,
                     version    : 'v3.0' // última versão em 05/2018
