--- a/login-facebook/01-primeira-configuracao/02-inserindo-botao.html
+++ b/login-facebook/01-primeira-configuracao/02-inserindo-botao.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
+        <title>Login Facebook: Botão</title>
     </head>
     <body>
 
@@ -26,7 +26,7 @@
         <script type="text/javascript">
             window.fbAsyncInit = function() {
                 FB.init({
-                    appId      : '214759089328950',
+                    appId      : '{insira-seu-app-id}',
                     cookie     : true,
                     xfbml      : true,
                     version    : 'v3.0'
