--- a/login-facebook/01-primeira-configuracao/05-logout.html
+++ b/login-facebook/01-primeira-configuracao/05-logout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
+        <title>Login Facebook: logout</title>
     </head>
     <body>
 
@@ -73,7 +73,7 @@
         <script type="text/javascript">
             window.fbAsyncInit = function() {
                 FB.init({
-                    appId      : '214759089328950',
+                    appId      : '{insira-seu-app-id}',
                     cookie     : true,
                     xfbml      : true,
                     version    : 'v3.0'
