login-facebook/02-configurando-com-sdk-js: Simplificando

--- a/login-facebook/02-configurando-com-sdk-js/01-configurando.html
+++ b/login-facebook/02-configurando-com-sdk-js/01-configurando.html
@@ -2,12 +2,13 @@
 <html>
     <head>
         <title>Login Facebook: configurando</title>
-    </head>
-    <body>
-        <p>Veja o console do navegador...</p>
 
         <!-- App id do Facebook -->
         <script type="text/javascript" src="../app-id.js"></script>
+    </head>
+    <body>
+        <p><a href="02-chamando-popup-login.html">Botão login</a></p>
+        <p><a href="../02-configurando-com-sdk-js/">Retornar ao indice</a></p>
 
         <!-- inicialização do script -->
         <script type="text/javascript">
