--- a/login-facebook/02-configurando-com-sdk-js/02-chamando-popup-login.html
+++ b/login-facebook/02-configurando-com-sdk-js/02-chamando-popup-login.html
@@ -2,13 +2,17 @@
 <html>
     <head>
         <title>Login Facebook: Popup Login</title>
-    </head>
-    <body>
-        <!-- botão de login do facebook, com as permissões públicas -->
-        <fb:login-button id="fb-btn-login" scope="public_profile,email"></fb:login-button>
 
         <!-- App id do Facebook -->
         <script type="text/javascript" src="../app-id.js"></script>
+    </head>
+    <body>
+
+        <!-- botão de login do facebook, com as permissões públicas -->
+        <fb:login-button id="fb-btn-login" scope="public_profile,email"></fb:login-button>
+
+        <p><a href="03-retornando-status-apos-login.html">Status após o login</a></p>
+        <p><a href="../02-configurando-com-sdk-js/">Retornar ao indice</a></p>
 
         <!-- inicialização do script -->
         <script type="text/javascript">
