--- a/login-facebook/02-configurando-com-sdk-js/05-carregando-nome.html
+++ b/login-facebook/02-configurando-com-sdk-js/05-carregando-nome.html
@@ -1,14 +1,35 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Login Facebook: Status</title>
-    </head>
-    <body>
-        <!-- mostra o status da conexão -->
-        <div id="fb-status"></div>
+        <title>Login Facebook: Nome</title>
 
         <!-- App id do Facebook -->
         <script type="text/javascript" src="../app-id.js"></script>
+    </head>
+    <body>
+
+        <p><a href="06-visualizando-outras-informacoes.html">Visualizando outras informações</a></p>
+        <p><a href="../02-configurando-com-sdk-js/">Retornar ao indice</a></p>
+
+        <!-- verifica se o usuário esta ou não conectado no Facebook -->
+        <script type="text/javascript">
+            function statusChangeCallback(response) {
+                console.log("statusChangeCallback():", response);
+
+                // se estiver conectado no Facebook...
+                if (response.status == "connected") {
+                    // carrega somente o nome do usuário logado
+                    FB.api('/me', function (response) {
+                        // imprime na tela a mensagem com o nome do usuário logado
+                        console.log("logado:", response);
+                    });
+                }
+                // se não estiver conectado no Facebook...
+                else {
+                    console.log("não logado:");
+                }
+            }
+        </script>
 
         <!-- inicialização do script -->
         <script type="text/javascript">
@@ -21,7 +42,7 @@
                 });
                 FB.AppEvents.logPageView();
 
-                // checa o status do login ao carregar a página
+                // checa o status do login pelo access_token
                 FB.getLoginStatus(function(response) {
                     console.log("getLoginStatus():", response);
                     // callback do status do Facebook
@@ -44,26 +65,5 @@
             }(document, 'script', 'facebook-jssdk'));
         </script>
 
-        <!-- verifica se o usuário esta ou não conectado no Facebook -->
-        <script type="text/javascript">
-            function statusChangeCallback(response) {
-                console.log("statusChangeCallback():", response);
-
-                // se estiver conectado no Facebook...
-                if (response.status == "connected") {
-                    // carrega somente o nome do usuário logado
-                    FB.api('/me', function (response) {
-                        // imprime na tela a mensagem com o nome do usuário logado
-                        document.getElementById("fb-status").innerHTML = "Seja bem vindo " + response.name;
-                        console.log("logado:", response);
-                    });
-                }
-                // se não estiver conectado no Facebook...
-                else {
-                    document.getElementById("fb-status").innerHTML = "Você não está conectado com o Facebook";
-                    console.log("não logado:");
-                }
-            }
-        </script>
     </body>
 </html>
