--- a/login-facebook/02-configurando-com-sdk-js/06-visualizando-outras-informacoes.html
+++ b/login-facebook/02-configurando-com-sdk-js/06-visualizando-outras-informacoes.html
@@ -2,13 +2,33 @@
 <html>
     <head>
         <title>Login Facebook: Informações</title>
-    </head>
-    <body>
-        <!-- mostra o status da conexão -->
-        <div id="fb-status"></div>
 
         <!-- App id do Facebook -->
         <script type="text/javascript" src="../app-id.js"></script>
+    </head>
+    <body>
+
+        <p><a href="07-logout.html">Logout</a></p>
+        <p><a href="../02-configurando-com-sdk-js/">Retornar ao indice</a></p>
+
+        <!-- verifica se o usuário esta ou não conectado no Facebook -->
+        <script type="text/javascript">
+            function statusChangeCallback(response) {
+                console.log("statusChangeCallback():", response);
+
+                // se estiver conectado no Facebook...
+                if (response.status == "connected") {
+                    // carrega o nome, e-mail e foto do usuário logado
+                    FB.api('/me', {fields: 'name, email, picture'}, function (response) {
+                        console.log("logado:", response);
+                    });
+                }
+                // se não estiver conectado no Facebook...
+                else {
+                    console.log("não logado:");
+                }
+            }
+        </script>
 
         <!-- inicialização do script -->
         <script type="text/javascript">
@@ -21,7 +41,7 @@
                 });
                 FB.AppEvents.logPageView();
 
-                // checa o status do login
+                // checa o status do login pelo access_token
                 FB.getLoginStatus(function(response) {
                     console.log("getLoginStatus():", response);
                     statusChangeCallback(response);
@@ -41,34 +61,6 @@
 
                 fjs.parentNode.insertBefore(js, fjs);
             }(document, 'script', 'facebook-jssdk'));
-        </script>
-
-        <!-- verifica se o usuário esta ou não conectado no Facebook -->
-        <script type="text/javascript">
-            function statusChangeCallback(response) {
-                console.log("statusChangeCallback():", response);
-
-                // se estiver conectado no Facebook...
-                if (response.status == "connected") {
-                    // carrega o nome, e-mail e foto do usuário logado
-                    FB.api('/me', {fields: 'name, email, picture'}, function (response) {
-                        console.log("logado:", response);
-
-                        // informações do usuário
-                        $html = "<p><img src='" + response.picture.data.url + "' alt='perfil'></p>";
-                        $html += "<p>Seja bem vindo " + response.name + "</p>";
-                        $html += "<p>E-mail do usuário: " + response.email + "</p>";
-
-                        // imprime na tela a mensagem com o nome do usuário logado
-                        document.getElementById("fb-status").innerHTML = $html;
-                    });
-                }
-                // se não estiver conectado no Facebook...
-                else {
-                    document.getElementById("fb-status").innerHTML = "Você não está conectado com o Facebook";
-                    console.log("não logado:");
-                }
-            }
         </script>
     </body>
 </html>
