login-facebook/10-extras/

--- a/login-facebook/10-extras/gerador-botoes.html
+++ b/login-facebook/10-extras/gerador-botoes.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
     <head>
-        <title>Login Facebook</title>
+        <title>Facebook Extras</title>
 
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,11 +14,9 @@
     <body>
 
         <div class="container">
-            <h1>Exemplos de botões gerados pelo Facebook</h1>
-            <p>
-                Com o SDK em Javascript é possível utilizar os botões gerados pelo Facebook. O botão pode ser personalizado
-                 ao gerar o seu código.
-            </p>
+            <h1>Gerador de botões do Facebook</h1>
+            <p>Com o SDK em Javascript é possível utilizar os botões gerados pelo Facebook.</p>
+            <p>O botão pode ser personalizado ao gerar o seu código no link abaixo.</p>
             <p>Veja como gerar um botão em: <a href="https://developers.facebook.com/docs/facebook-login/web#loginbutton">
                 https://developers.facebook.com/docs/facebook-login/web#loginbutton</a>
             </p>
