login-facebook/03-js-sdk/

--- a/login-facebook/03-js-sdk/02-chamando-popup-login.html
+++ b/login-facebook/03-js-sdk/02-chamando-popup-login.html
@@ -4,15 +4,15 @@
         <title>Login Facebook: Popup Login</title>
 
         <!-- App id do Facebook -->
-        <script type="text/javascript" src="../app-id.js"></script>
+        <script type="text/javascript" src="../boot.js"></script>
     </head>
     <body>
 
         <!-- botão de login do facebook, com as permissões públicas -->
         <fb:login-button id="fb-btn-login" scope="public_profile,email"></fb:login-button>
 
-        <p><a href="03-retornando-status-apos-login.html">Status após o login</a></p>
-        <p><a href="../02-configurando-com-sdk-js/">Retornar ao indice</a></p>
+        <p><a href="03-retornando-status-apos-login.html">Visualizar status após o login</a></p>
+        <p><a href="../03-js-sdk/">Retornar ao indice</a></p>
 
         <!-- inicialização do script -->
         <script type="text/javascript">
