--- a/login-facebook/03-js-sdk/03-retornando-status-apos-login.html
+++ b/login-facebook/03-js-sdk/03-retornando-status-apos-login.html
@@ -4,7 +4,7 @@
         <title>Login Facebook: Botão Status</title>
 
         <!-- App id do Facebook -->
-        <script type="text/javascript" src="../app-id.js"></script>
+        <script type="text/javascript" src="../boot.js"></script>
     </head>
     <body>
 
@@ -13,7 +13,7 @@
         </fb:login-button>
 
         <p><a href="04-verificando-status-ao-carregar-pagina.html">Status ao carregar a página</a></p>
-        <p><a href="../02-configurando-com-sdk-js/">Retornar ao indice</a></p>
+        <p><a href="../03-js-sdk/">Retornar ao indice</a></p>
 
         <!-- checa o status da conexão ao clicar no botão de login -->
         <script type="text/javascript">
