--- a/login-facebook/03-js-sdk/08-custom-button.html
+++ b/login-facebook/03-js-sdk/08-custom-button.html
@@ -4,14 +4,14 @@
         <title>Login Facebook: Popup Login</title>
 
         <!-- App id do Facebook -->
-        <script type="text/javascript" src="../app-id.js"></script>
+        <script type="text/javascript" src="../boot.js"></script>
     </head>
     <body>
 
         <!-- botão de login do facebook, com as permissões públicas -->
         <button id="fb-btn-login" onclick="popup_login()">Conectar com o Facebook</button>
 
-        <p><a href="../02-configurando-com-sdk-js/">Retornar ao indice</a></p>
+        <p><a href="../03-js-sdk/">Retornar ao indice</a></p>
 
         <!-- botão de login -->
         <script type="text/javascript">
