--- a/login-facebook/03-js-sdk/07-logout.html
+++ b/login-facebook/03-js-sdk/07-logout.html
@@ -4,12 +4,12 @@
         <title>Login Facebook: logout</title>
 
         <!-- App id do Facebook -->
-        <script type="text/javascript" src="../app-id.js"></script>
+        <script type="text/javascript" src="../boot.js"></script>
     </head>
     <body>
         <p><a href='#' onclick='logout();'>Sair</a></p>
 
-        <p><a href="../02-configurando-com-sdk-js/">Retornar ao indice</a></p>
+        <p><a href="../03-js-sdk/">Retornar ao indice</a></p>
 
         <!-- função do link logout do Facebook -->
         <script type="text/javascript">
