login-facebook/: correção dos paths

--- a/login-facebook/03-js-sdk/01-configurando.html
+++ b/login-facebook/03-js-sdk/01-configurando.html
@@ -4,7 +4,7 @@
         <title>Login Facebook: configurando</title>
 
         <!-- App id do Facebook -->
-        <script type="text/javascript" src="../boot.js"></script>
+        <script type="text/javascript" src="../../app-facebook/boot.js"></script>
     </head>
     <body>
         <p><a href="02-chamando-popup-login.html">Botão login</a></p>
