--- a/login-facebook/03-js-sdk/03-retornando-status-apos-login.html
+++ b/login-facebook/03-js-sdk/03-retornando-status-apos-login.html
@@ -4,7 +4,7 @@
         <title>Login Facebook: Botão Status</title>
 
         <!-- App id do Facebook -->
-        <script type="text/javascript" src="../boot.js"></script>
+        <script type="text/javascript" src="../../app-facebook/boot.js"></script>
     </head>
     <body>
 
