login-facebook/: alterando app-facebook para app

--- a/login-facebook/03-js-sdk/06-visualizando-outras-informacoes.html
+++ b/login-facebook/03-js-sdk/06-visualizando-outras-informacoes.html
@@ -4,7 +4,7 @@
         <title>Login Facebook: Informações</title>
 
         <!-- App id do Facebook -->
-        <script type="text/javascript" src="../../app-facebook/boot.js"></script>
+        <script type="text/javascript" src="../../app/boot.js"></script>
     </head>
     <body>
 
