--- a/login-facebook/10-extras/gerador-botoes.html
+++ b/login-facebook/10-extras/gerador-botoes.html
@@ -62,7 +62,7 @@
         </script>
 
         <!-- boot js -->
-        <script type="text/javascript" src="../app-facebook/boot.js"></script>
+        <script type="text/javascript" src="../app/boot.js"></script>
 
         <!-- Facebook SDK -->
         <div id="fb-root"></div>
